kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: asset-storage
  namespace: asset-storage
  labels:
    app: asset-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: asset-storage
  template:
    metadata:
      labels:
        app: asset-storage
    spec:
      containers:
      - name: asset-storage
        image: kingbrady/asset-storage:1.7.0
        ports:
        - containerPort: 80
