kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: asset-storage
  namespace: asset-storage
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: asset-storage
  type: ClusterIP
